<package format="3">
  <name>linear_sum_assignment</name>
  <version>1.9.2</version>
  <description>The linear sum assignment library from scipy.</description>

  <author email="nishimarudai@gmail.com">Daisuke Nishimatsu</author>
  <maintainer email="nishimarudai@gmail.com">Daisuke Nishimatsu</maintainer>

  <license>BSD-3-Clause</license> <!-- license of scipy -->
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>